packages/ui-library/src/css/result-sets.scss
/* ... */
.show-set, .show-condition {
	font-size: 12px;
	padding: 0;
	position: absolute;
	left: -4px;
	top: 4px;
	&.expanded {
		@include transition((top ease-out 0.4s, opacity ease-out 0.1s 0.3s));
		@include transform(rotate(180deg));
	}
	.data-col-of-4 {
		max-width: 25%;
	}
	.data-col-of-5 {
		max-width: 20%;
	}
}
.condition-title {
	position: relative;
	padding-left: 21px;
	cursor: pointer;

	&.active {
		.show-condition {
			@include rotate(-180deg);
		}
	}
}
.condition-list {
	margin-right: 20px;
	padding-right: 20px;

	.condition-title {
		margin: 0;
		padding: 15px 0 15px 30px;
		border-style: solid;
		border-width: 1px 0 0 0;
		border-color: $color-elderly;
		text-transform: uppercase;
		color: $color-rhino;
		font-size: 14px;
		font-family: $font-pn-regular;
		font-weight: 600;

		&:hover {
			cursor: pointer;
		}
		&:last-child {
			border-bottom: 1px solid $color-elderly;
		}
		.show-condition {
			top: 19px;
			left: 5px;
		}
		.show-condition, .value {
			text-transform: none;
			color: $color-input-text;
		}
		.value {
			font-weight: normal;
			&:before {
				// only want ':' to show when condition-title followed by value
				content: ': ';
				color: $color-rhino;
				font-size: 14px;
				font-family: $font-pn-regular;
				font-weight: 600;
			}
		}
		&.active {
			.show-condition {
				@include transition((top ease-out 0.4s, opacity ease-out 0.1s 0.3s));
				@include transform(rotate(180deg));
			}
			.condition {
				display: block;
				@include transition((top ease-out 0.4s, opacity ease-out 0.1s 0.3s));
			}
		}
	}
	.short {
		input[type=text] {
			width: 180px;
		}
	}
	.condition {
		display: none;
		margin-right: 10px;
		padding: 15px 0 0 30px;
		position: relative;
		text-transform: none;
		font-weight: normal;
		&.active {
			display: block;
			@include transition((top ease-out 0.4s, opacity ease-out 0.1s 0.3s));
		}
		&.alone {
			border-bottom: none;
		}
		.remove, .remove-rule {
			position: absolute;
			top: -25px;
			right: 0;
			margin-right: 0;
		}
		.condition-fields {
			.menu {
				position: relative;
				&.alone {
					border-bottom: none;
				}
				input[type=text] {
					height: 30px;
					width: 180px;
					padding-left: 30px;
					@include border-radius(3px);
				}
				.input-row {
					margin: 0 0 10px 0;
				}
				.actions {
					display: inline-block;
					padding: 7px 0 0 0;
					margin-top: 7px;
					color: $color-elephant;
					.input-row {
						margin-top: 0;
						label {
							vertical-align: middle;
						}
						.clear-search {
							top: 17px;
							right: 5px;
						}
					}
					.input-toggle {
						position: relative;
						display: inline-block;
						top: 0;
						right: 0;
						.toggle {
							margin: -5px 5px 0 10px;
						}
					}
					span {
						color: $color-text;
					}
				}
			}
			.check-all {
				margin: 0 10px 0 0;
			}
			.conditions-multiselect {
				padding: 10px 5px 10px 0;
				margin-left: 0;
				border: 1px solid map-get($colors, 'elderly');
				.options {
					width: 99%;
					height: 133px;
					max-height: 133px;
					overflow-y: scroll;
					padding-left: 10px;
					label {
						width: 230px;
						margin-bottom: 10px;
						text-transform: none;
						&.input-checkbox {
							display: inline-block;
							padding: 0 0 0 30px;
							.label-text {
								display: inline-block;
								padding-top: 5px;
							}
						}
					}
					div {
						display: inline;
						&.item-head {
							display: block;
							color: map-get($colors, 'walrus');
						}
					}
				}
			}
			textarea {
				max-width: 700px;
			}
		}
	}
}

